--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
         <br></br>
         <br></br>
 
-        <img src="ticket.png" alt="ticket"> <small>Source: New York Speeding Fines</small>
+        <img src="/data/ticket.png" alt="ticket"> <small>Source: New York Speeding Fines</small>
 
         <br></br>
         <br></br>
@@ -109,7 +109,7 @@
     
     </p> 
 
-    <img src="tm.png" alt="mt"  width="100" height="100"> <small></small>
+    <img src="/data/tm.png" alt="mt"  width="100" height="100"> <small></small>
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="/__/firebase/7.16.1/firebase-app.js"></script>
